--- a/.gitignore
+++ b/.gitignore
@@ -1,17 +1,15 @@
-node_modules
 
+# Node modules
+node_modules/
 
-
-
-
-
-
-
-
-
-
-
-
-
-
+# Environment variables
+.env
 server/.env
+
+# Logs
+npm-debug.log
+yarn-error.log
+
+# Build output
+dist/
+build/
