--- a/server/package.json
+++ b/server/package.json
@@ -23,6 +23,7 @@
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.16.3",
     "node-fetch": "^3.3.2",
+    "nodemailer": "^7.0.5",
     "stripe": "^18.3.0",
     "svix": "^1.69.0"
   },
