--- a/server/vercel.json
+++ b/server/vercel.json
@@ -1,12 +1,13 @@
 
 {
   "version": 2,
-  "builds": [
-    {
-      "src": "index.js",
-      "use": "@vercel/node"
+  "functions": {
+    "api/**/*.js": {
+      "runtime": "nodejs18.x"
     }
-  ],
+  },
+  "buildCommand": "npm install",
+  "outputDirectory": ".",
   "routes": [
     {
       "src": "/(.*)",
