vercel file fixed

--- a/server/vercel.json
+++ b/server/vercel.json
@@ -7,11 +7,10 @@
     }
   },
   "buildCommand": "npm install",
-  "outputDirectory": ".",
   "routes": [
     {
-      "src": "/(.*)",
-      "dest": "index.js"
+      "src": "/api/(.*)",
+      "dest": "/api/$1.js"
     }
   ]
 }
