--- a/server/vercel.json
+++ b/server/vercel.json
@@ -1,13 +1,11 @@
-
 {
   "version": 2,
-  "functions": {
-    "api/**/*.js": {
-      "runtime": "@vercel/node@2.0.0"
+  "builds": [
+    {
+      "src": "index.js",
+      "use": "@vercel/node"
     }
-  },
-  "buildCommand": "npm install",
-  "outputDirectory": ".",
+  ],
   "routes": [
     {
       "src": "/(.*)",
